@@ -2,3 +2,5 @@ PLUGIN_DIR='@PLUGINDIR@'
 GLADE_DIR='@GLADEDIR@'
 PYTHON_DIR='@PYTHONDIR@'
 PKG_DATA_DIR='@PKGDATADIR@'
+
+GARMON_VERSION='@GARMON_VERSION@'
